refactor: expose SGX service through TEE services in compute services